# set-status

./: LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml  publish.yaml
set_status/: _logo.py  client.py  config.py  constants.py  main.py  set_status.py
set_status/_commands/: configure.py  profile.py
tests/: conftest.py  test_config.py
